added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Feature-Store.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Feature-Store.ipynb
@@ -8,11 +8,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Amazon SageMaker Feature Store is a managed repository with capabilities to store, update, retrieve, and share features. SageMaker Feature Store provides the ability to reuse the engineered features in two different scenarios. First, the features can be shared between the training and inference phases of a single ML project resulting in consistent model inputs and reduced training-serving skew. Second, features from SageMaker.\n",
+    "\n",
+    "## Creating feature groups\n",
+    "\n",
+    "#### In Amazon SageMaker Feature Store, features are stored in a collection called a feature group. A feature group, in turn, is composed of records of features and feature values. Each record is a collection of feature values, identified by a unique RecordIdentifier value. Every record belonging to a feature group will use the same feature as RecordIdentifier. For example, the record identifier for the feature store created for the weather data could be parameter_id or location_id. Think of RecordIdentifier as a primary key for the feature group. Using this primary key, you can query feature groups for the fast lookup of features. It's also important to note that each record of a feature group must, at a minimum, contain a RecordIdentifier and an event time feature. The event time feature is identified by EventTimeFeatureName when a feature group is set up. When a feature record is ingested into a feature group, SageMaker adds three features – is_deleted, api_invocation time, and write_time – for each feature record. is_deleted is used to manage the deletion of records, api_invocation_time is the time when the API call is invoked to write a record to a feature store, and write_time is the time when the feature record is persisted to the offline store.\n",
+    "\n",
+    "#### While each feature group is managed and scaled independently, you can search and discover features from multiple feature groups as long as the appropriate access is in place.\n",
+    "\n",
+    "#### When you create a feature store group with SageMaker, you can choose to enable an offline store, online store, or both. When both online and offline stores are enabled, the service replicates the online store contents into the offline store maintained in Amazon S3."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import boto3\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import io\n",
+    "import sagemaker\n",
+    "import sys\n",
+    "import json\n",
+    "import time\n",
+    "from time import gmtime, strftime, sleep\n",
+    "\n",
+    "from sagemaker.session import Session\n",
+    "from sagemaker import get_execution_role\n",
+    "\n",
+    "from sagemaker.feature_store.feature_group import FeatureGroup\n",
+    "from sagemaker.feature_store.feature_group import FeatureDefinition\n",
+    "from sagemaker.feature_store.feature_group import FeatureTypeEnum\n",
+    "\n",
+    "prefix = 'sagemaker-featurestore-weather'\n",
+    "role = get_execution_role()\n",
+    "\n",
+    "sagemaker_session = sagemaker.Session()\n",
+    "region = sagemaker_session.boto_region_name\n",
+    "s3_bucket_name = sagemaker_session.default_bucket()\n",
+    "\n",
+    "#Create the service clients\n",
+    "sagemaker_fs_runtime_client = sagemaker_session.boto_session.client('sagemaker-featurestore-runtime')\n",
+    "sagemaker_runtime = sagemaker_session.boto_session.client('sagemaker-runtime')\n",
+    "sagemaker_client = sagemaker_session.boto_session.client('sagemaker')\n",
+    "s3_client = boto3.client('s3', region_name=region)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Feature group name\n",
+    "location_feature_group_name_offline = 'location-feature-group-offline-' + strftime('%d-%H-%M-%S', gmtime())\n",
+    "location_feature_group_name_online = 'location-feature-group-online-' + strftime('%d-%H-%M-%S', gmtime())\n",
+    "location_feature_group_name_offline_online = 'location-feature-group-offline-online-' + strftime('%d-%H-%M-%S', gmtime())\n",
+    "\n",
+    "##Create FeatureDefinitions\n",
+    "fd_location=FeatureDefinition(feature_name='location', feature_type=FeatureTypeEnum('Fractional'))\n",
+    "fd_value=FeatureDefinition(feature_name='city', feature_type=FeatureTypeEnum('Fractional'))\n",
+    "fd_is_mobile=FeatureDefinition(feature_name='ismobile', feature_type=FeatureTypeEnum('Integral'))\n",
+    "fd_source_name=FeatureDefinition(feature_name='sourcename', feature_type=FeatureTypeEnum('Fractional'))\n",
+    "fd_source_type=FeatureDefinition(feature_name='sourcetype', feature_type=FeatureTypeEnum('Fractional'))\n",
+    "fd_event_time=FeatureDefinition(feature_name='EventTime', feature_type=FeatureTypeEnum('Fractional'))\n",
+    "\n",
+    "location_feature_definitions = []\n",
+    "location_feature_definitions.append(fd_location)\n",
+    "location_feature_definitions.append(fd_value)\n",
+    "location_feature_definitions.append(fd_is_mobile)\n",
+    "location_feature_definitions.append(fd_source_name)\n",
+    "location_feature_definitions.append(fd_source_type)\n",
+    "location_feature_definitions.append(fd_event_time)\n",
+    "\n",
+    "weather_feature_definitions = []\n",
+    "weather_feature_definitions.append(fd_location)\n",
+    "weather_feature_definitions.append(fd_event_time)\n",
+    "\n",
+    "##Define unique identifier\n",
+    "record_identifier_feature_name = \"location\"\n",
+    "\n",
+    "\n",
+    "#Create offline feature group\n",
+    "location_feature_group_offline = FeatureGroup(name=location_feature_group_name_offline, \n",
+    "                                     feature_definitions=location_feature_definitions,\n",
+    "                                     sagemaker_session=sagemaker_session)\n",
+    "\n",
+    "location_feature_group_offline.create(\n",
+    "    s3_uri=f\"s3://{s3_bucket_name}/{prefix}\",\n",
+    "    record_identifier_name=\"location\",\n",
+    "    event_time_feature_name=\"EventTime\",\n",
+    "    role_arn=role,\n",
+    "    tags=[{'Key':'project','Value':'weather-prediction'}]\n",
+    ")\n",
+    "\n",
+    "#Describe the feature group\n",
+    "location_feature_group_offline.describe()\n",
+    "\n",
+    "\n",
+    "#Create offline + online feature group\n",
+    "#Note the usage of enable_online_store parameter\n",
+    "location_feature_group_offline_online = FeatureGroup(name=location_feature_group_name_offline_online, \n",
+    "                                     feature_definitions=location_feature_definitions,\n",
+    "                                     sagemaker_session=sagemaker_session)\n",
+    "\n",
+    "location_feature_group_offline_online.create(\n",
+    "    s3_uri=f\"s3://{s3_bucket_name}/{prefix}\",\n",
+    "    record_identifier_name=\"location\",\n",
+    "    event_time_feature_name=\"EventTime\",\n",
+    "    role_arn=role,\n",
+    "    enable_online_store=True,\n",
+    "    tags=[{'Key':'project','Value':'weather-prediction'}]\n",
+    ")\n",
+    "\n",
+    "#Describe the feature group\n",
+    "location_feature_group_offline_online.describe()\n",
+    "\n",
+    "#Create online feature group\n",
+    "#Note s3_uri flag set to False for the online only FG\n",
+    "location_feature_group_online = FeatureGroup(name=location_feature_group_name_online, \n",
+    "                                     feature_definitions=location_feature_definitions,\n",
+    "                                     sagemaker_session=sagemaker_session)\n",
+    "\n",
+    "location_feature_group_online.create(\n",
+    "    s3_uri=False,\n",
+    "    record_identifier_name=\"location\", \n",
+    "    event_time_feature_name=\"EventTime\",\n",
+    "    role_arn=role,\n",
+    "    enable_online_store=True,\n",
+    "    tags=[{'Key':'project','Value':'weather-prediction'}]\n",
+    ")\n",
+    "\n",
+    "#Describe the feature group\n",
+    "location_feature_group_online.describe()\n",
+    "\n",
+    "#  List all featuregroups\n",
+    "sagemaker_client.list_feature_groups()"
+   ]
   }
  ],
  "metadata": {
