--- a/AWS-Books/SageMaker-Best-Practices/Feature-Store.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Feature-Store.ipynb
@@ -151,6 +151,14 @@
     "#  List all featuregroups\n",
     "sagemaker_client.list_feature_groups()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Online Vs Offline Feature Store\n",
+    "![My Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/feature-store.jpg)\n"
+   ]
   }
  ],
  "metadata": {
