added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Feature-Store.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Feature-Store.ipynb
@@ -159,6 +159,17 @@
     "## Online Vs Offline Feature Store\n",
     "![My Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/feature-store.jpg)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Populating feature groups\n",
+    "\n",
+    "#### After creating the feature groups, you will populate them with features. You can ingest features into a feature group using either batch ingestion or streaming ingestion, as shown in Figure 5.5:\n",
+    "\n",
+    "#### To ingest features into the feature store, you create a feature pipeline that can populate the feature store. A feature pipeline can include any service or capability that accepts raw data and then transforms that raw data into engineered features and puts the features in a designated feature group. Features can be ingested either in bulk in batches or streamed individually. The PutRecord API call is the core SageMaker API for ingesting features. This is used for both online and offline feature stores as well as ingesting through batch or streaming methods."
+   ]
   }
  ],
  "metadata": {
