added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Feature-Store.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Feature-Store.ipynb
@@ -56,8 +56,7 @@
     "sagemaker_fs_runtime_client = sagemaker_session.boto_session.client('sagemaker-featurestore-runtime')\n",
     "sagemaker_runtime = sagemaker_session.boto_session.client('sagemaker-runtime')\n",
     "sagemaker_client = sagemaker_session.boto_session.client('sagemaker')\n",
-    "s3_client = boto3.client('s3', region_name=region)\n",
-    "\n"
+    "s3_client = boto3.client('s3', region_name=region)"
    ]
   },
   {
@@ -149,7 +148,37 @@
     "location_feature_group_online.describe()\n",
     "\n",
     "#  List all featuregroups\n",
-    "sagemaker_client.list_feature_groups()"
+    "sagemaker_client.list_feature_groups()\n",
+    "\n",
+    "##Create a record to ingest into the feature group\n",
+    "##This ingests features into the online store.\n",
+    "record = []\n",
+    "\n",
+    "event_time_feature = {'FeatureName': 'EventTime','ValueAsString': str(int(round(time.time())))}\n",
+    "location_feature =   {'FeatureName': 'location','ValueAsString': str('250')}\n",
+    "ismobile_feature =   {'FeatureName': 'ismobile','ValueAsString': str('1')}\n",
+    "city_feature =      {'FeatureName': 'city','ValueAsString': str('12')}\n",
+    "sourcename_feature =      {'FeatureName': 'sourcename','ValueAsString': str('2.0')}\n",
+    "sourcetype_feature =      {'FeatureName': 'sourcetype','ValueAsString': str('2.0')}\n",
+    "\n",
+    "record.append(event_time_feature)\n",
+    "record.append(location_feature)\n",
+    "record.append(ismobile_feature)\n",
+    "record.append(city_feature)\n",
+    "record.append(sourcename_feature)\n",
+    "record.append(sourcetype_feature)\n",
+    "\n",
+    "response = sagemaker_fs_runtime_client.put_record(FeatureGroupName=location_feature_group_name_offline_online, \n",
+    "                                                  Record=record)\n",
+    "\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The get_record and batch_get_record APIs should be used with online stores. Additionally, since the underlying storage for an offline store is an S3 bucket, you can query the offline store directly using Athena or other ways of accessing S3. The following code shows a sample Athena query that retrieves all feature records directly from the S3 bucket supporting the offline store:"
    ]
   },
   {
@@ -170,7 +199,93 @@
     "\n",
     "#### To ingest features into the feature store, you create a feature pipeline that can populate the feature store. A feature pipeline can include any service or capability that accepts raw data and then transforms that raw data into engineered features and puts the features in a designated feature group. Features can be ingested either in bulk in batches or streamed individually. The PutRecord API call is the core SageMaker API for ingesting features. This is used for both online and offline feature stores as well as ingesting through batch or streaming methods.\n",
     "\n",
-    "#### For batch ingestion, you can author features (for example, using Amazon Data Wrangler) and ingest features in batches using a SageMaker Processing job. This allows batch ingestion into the offline store and the online store. For streaming ingestion, records can be pushed synchronously using the PutRecord API call. When ingesting records to the online feature store, you maintain only the latest feature values for a given record identifier. Historical values are only maintained in the replicated offline store if the feature group is configured for both online and offline stores. Figure 5.6 outlines the methods to ingest features as they relate to the online and offline feature stores:"
+    "#### For batch ingestion, you can author features (for example, using Amazon Data Wrangler) and ingest features in batches using a SageMaker Processing job. This allows batch ingestion into the offline store and the online store. For streaming ingestion, records can be pushed synchronously using the PutRecord API call. When ingesting records to the online feature store, you maintain only the latest feature values for a given record identifier. Historical values are only maintained in the replicated offline store if the feature group is configured for both online and offline stores. Figure 5.6 outlines the methods to ingest features as they relate to the online and offline feature stores:\n",
+    "\n",
+    "## Here are the high-level steps involved in the batch ingestion architecture:\n",
+    "\n",
+    "- Bulk raw data is available in an S3 bucket.\n",
+    "\n",
+    "- The Amazon SageMaker Processing job takes raw data as input and applies feature engineering techniques to the data. The processing job can be configured to run on a distributed cluster of instances to process data at scale.\n",
+    "\n",
+    "- The processing job also ingests the engineered features ingested into the online store of the feature group, using the PutRecord API. Features are then automatically replicated to the offline store of the feature group.\n",
+    "\n",
+    "- Features from the offline store can then be used for training other models and by other data science teams to address a wide variety of other use cases. Features from the online store can be used for feature lookup during real-time predictions.\n",
+    "\n",
+    "- Note that if the feature store used in this architecture is offline only, the processing job can directly write into the offline store using the PutRecord API.\n",
+    "\n",
+    "## Here are the high-level steps involved in the streaming ingestion architecture:\n",
+    "\n",
+    "- Raw data lands in an S3 bucket, which triggers an AWS Lambda function.\n",
+    "- The Lambda function processes data and inserts features into the online store of the feature group, using the PutRecord API.\n",
+    "- Features are then automatically replicated to the offline store of the feature group.\n",
+    "- Features from the offline store can then be used for training other models and by other data science teams to address a wide variety of other use cases. Features from the online store can be used for feature lookup during real-time predictions.\n",
+    "\n",
+    "#### In addition to using the ingestion APIs to populate the offline store, you can populate the underlying S3 bucket directly. If you don't have a need for real-time inference and have huge volumes of historical feature data (terabytes or even hundreds of gigabytes) that you want to migrate to an offline feature store to be used for training models, you can directly upload them to the underlying S3 bucket. To do this effectively, it is important to understand the S3 folder structure of the offline bucket. Feature groups in the offline store are organized in the structure s3:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "destination = \"\"\"s3://<bucket-name>/<customer-prefix>/<account-id>/sagemaker/<aws-region>\n",
+    "/offline-store/<feature-group-name>-<feature-group-creation-time>\n",
+    "/data/year=<event-time-year>/month=<event-time-month>/day=<event-time-day>/hour=<event-time-hour\n",
+    ">/<timestamp_of_latest_event_time_in_file>_<16-random-alphanumeric-digits>.parquet\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Also note that, when you use ingestion APIs, the features isdeleted, api_invocation_time, and write-time are included automatically in the feature record, but when you write directly to the offline store, you are responsible for including them.\n",
+    "\n",
+    "## Retrieving features from feature groups\n",
+    "- Once feature groups are populated, to retrieve features from the feature store, there are two APIs available – get_record and batch_get_record."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use get_record from the online store"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "record_identifier_value = str('250')\n",
+    "response = sagemaker_fs_runtime_client.get_record(\n",
+    "FeatureGroupName=location_feature_group_name_offline_online, \n",
+    "RecordIdentifierValueAsString=record_identifier_value)\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use batch-get_record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Use batch-get_record\n",
+    "record_identifier_values = [\"200\", \"250\", \"300\"]\n",
+    "response=sagemaker_fs_runtime_client.batch_get_record(\n",
+    "    Identifiers=[\n",
+    "        {\"FeatureGroupName\": location_feature_group_name_offline_online, \"RecordIdentifiersValueAsString\": record_identifier_values}\n",
+    "    ]\n",
+    ")\n",
+    "response"
    ]
   }
  ],
@@ -181,7 +296,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
